# langgraph-mcp-agents

./: .env.example  DEPLOYMENT.md  DOCUMENTATION_PLAN.md  Dockerfile  MCP-HandsOn-ENG.ipynb  MCP-HandsOn-KOR.ipynb  README.md  agents.md  app.py  app_KOR.py  main.py  mcp-config.yaml  pyproject.toml  requirements.txt  resume_config.env  resume_mcp_config.json  transformation_architecture.md
components/: __init__.py  database_ui.py  export_ui.py  review_ui.py  upload_ui.py
dockers/: docker-compose.yaml
mcp_servers/: citation_tracker.py  document_processor.py  notion_integration.py  security_gateway.py
mcp_servers/citation_tracker/: server.py
mcp_servers/document_processor/: server.py
mcp_servers/notion_integration/: server.py
mcp_servers/security_gateway/: server.py
parsers/: file_parser.py
tests/: test_basic_system.py  test_document_parser.py  test_document_processor_mcp.py  test_integration.py  test_parsers.py
workflow/: pipeline.py  resume_pipeline.py  state.py
